fixed SCSS where nested lists would have extra margin-bottom

--- a/themes/sam/sass/style.sass
+++ b/themes/sam/sass/style.sass
@@ -251,3 +251,8 @@ section.post-footer
 
 span.linethrough
   text-decoration: line-through
+
+#content li>.ulist
+  margin-bottom: 0
+  & li:last-child
+    margin-bottom: 0
